worx, ux is bad

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
   <script src="https://unpkg.com/htmx.org" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/htmx.org/dist/ext/sse.js"></script>
   <link rel="stylesheet" href="/styles.css"/>
+  <link rel="stylesheet" href="https://unpkg.com/missing.css@1.1.1">
   <title>{% block title %}{{ title }} - My Site{% endblock %}</title>
     {% block head %}{% endblock %}
   </head>
