--- a/static/styles.css
+++ b/static/styles.css
@@ -1,3 +1,7 @@
+body {
+  font-family: Roboto, sans-serif;
+}
+
 #content {
 	display: flex;
 	flex-direction: column;
@@ -6,6 +10,5 @@
 }
 
 table, th, td {
-  border: 1px solid black;
 	padding: 0.25rem;
 }
