--- a/static/styles.css
+++ b/static/styles.css
@@ -1,14 +1,12 @@
-body {
-  font-family: Roboto, sans-serif;
+#eval-chart .data {
+	color: black;
+	padding: 0em 0.3em 0.15em 0.3em;
+	border: 0px;
+	margin: 0em 0.5em;
+	border-radius: 0.5em;
+	background: #fff8;
 }
 
-#content {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	gap: 1rem;
-}
-
-table, th, td {
-	padding: 0.25rem;
+#eval-chart td {
+  min-height: unset;
 }
